--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "fastify": "^2.10.0",
     "fastify-cors": "^3.0.2",
+    "fastify-multipart": "^1.0.5",
     "fastify-static": "^2.6.0",
     "generate-pincode": "^5.0.3",
     "mongodb": "^3.5.4",
     "nodemailer": "^6.4.4",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "pump": "^3.0.0"
   }
 }
