--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^0.3.1",
     "crypto-js": "^4.0.0",
     "fastify": "^2.10.0",
     "fastify-cors": "^3.0.2",
